<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024-2025 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <string name="app_name" translatable="false">Catapult</string>
    <string name="settings">Settings</string>
    <!-- Favorite apps category -->
    <string name="favorites">Favorites</string>
    <string name="all_apps">All apps</string>
    <string name="uninstall">Uninstall</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="modify_favorites_short">Modify favorites</string>
    <string name="move">Move</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="watch_next">Watch next</string>
    <string name="modify_channels">Modify channels</string>
    <string name="empty" translatable="false"></string>
    <string name="channel_title">%1$s: %2$s</string>
    <string name="order_channels_guide">To order channels, long press on a wanted channel and move it to the desired position.</string>
    <string name="search">Search</string>
    <string name="modify_favorites">Modify your favorite apps</string>
    <string name="system_modal">System options</string>
    <!-- Put the device in sleep mode -->
    <string name="sleep">Sleep</string>
    <string name="no_notifications">No notifications</string>
    <string name="network_status">Network\n%1$s</string>
    <string name="bluetooth_status">Accessories\n%1$s</string>
    <string name="not_connected">Not connected</string>
    <string name="audio_output_status">Audio output\n%1$s</string>
    <string name="audio_output_hdmi">HDMI</string>
    <string name="audio_output_bluetooth">Bluetooth</string>
    <string name="audio_output_speaker">Speaker</string>
    <string name="audio_output_headphones">Headphones</string>
    <string name="audio_output_unknown">Unknown</string>
    <string name="audio_output_title">Audio output</string>
    <string name="screensaver_status">Screensaver\n%1$s</string>
    <string name="screensaver_not_set">Not set</string>
    <string name="screensaver_start">Start now</string>
    <plurals name="accessibility_features_on">
        <item quantity="one">%1$d feature on</item>
        <item quantity="other">%1$d features on</item>
    </plurals>
    <string name="accessibility_status">Accessibility\n%1$s</string>
    <string name="accessibility_none">Nothing on</string>
    <string name="accessibility_title">Accessibility</string>
    <string name="accessibility_more">More settings</string>
    <string name="accessibility_bold_text">Bold text</string>
    <string name="accessibility_high_contrast_text">High contrast text</string>
    <string name="accessibility_color_correction">Colour correction</string>
    <string name="accessibility_captions">Captions</string>
    <string name="accessibility_audio_description">Audio description</string>
    <string name="streaming_status">Streaming\n%1$s</string>
    <string name="streaming_title">Stream to this device</string>
    <string name="streaming_off">Off</string>
    <string name="streaming_airplay">AirPlay</string>
    <string name="streaming_require_code">Ask new devices for a code</string>
    <string name="streaming_paired_devices">Paired devices (%1$d)</string>
    <string name="streaming_paired_title">Paired devices</string>
    <string name="streaming_paired_none">No devices are paired. A device pairs by entering the code this TV shows the first time it connects.</string>
    <string name="streaming_unnamed_device">Unnamed device</string>
    <string name="streaming_forget">Forget</string>
    <string name="streaming_forget_all">Forget all</string>
    <string name="streaming_forget_title">Forget %1$s?</string>
    <string name="streaming_forget_all_title">Forget all paired devices?</string>
    <string name="streaming_forget_message">It will have to enter a code again the next time it connects.</string>
    <string name="streaming_forget_all_message">Each will have to enter a code again the next time it connects.</string>
    <string name="streaming_code_off_title">Stop asking for a code?</string>
    <string name="streaming_code_off_message">Any device on your network will be able to mirror its screen and play audio here without one. Streaming restarts, which ends anything playing now.</string>
    <string name="streaming_code_off_confirm">Stop asking</string>
    <plurals name="streaming_targets_on">
        <item quantity="one">%1$d target on</item>
        <item quantity="other">%1$d targets on</item>
    </plurals>
    <string name="panel_shortcut_status">Panel shortcut\n%1$s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <!-- Toast messages -->
    <string name="app_permissions_toast">Permissions not granted by the user.</string>

    <!-- Home role request dialog -->
    <string name="home_role_request_dialog_title">Set as launcher</string>
    <string name="home_role_request_dialog_message">This app can act as the default home application, would you like to open the settings app to change the launcher app?</string>
    <string name="home_role_request_dialog_neutral">Later</string>
    <string name="home_role_request_dialog_negative">Don\'t ask again</string>

    <!-- Unknown network type -->
    <string name="unknown">Unknown</string>
    <string name="no_notification_access">No notification access</string>
    <string name="allow_notification_access">Allow notification access</string>
    <string name="dismiss">Dismiss</string>
    <string name="connected">Connected</string>
    <string name="mic_assistant">Search using microphone</string>
    <string name="keyboard_assistant">Search using keyboard</string>
</resources>
